frontend/build_errors_cmd.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\lavan\OneDrive\Desktop\DiasRx\frontend\app\src\main\java\com\simats\frontend\PrescriptionSuccessActivity.java:359: error: cannot find symbol
            Toast.makeText(this, "Failed to open email app.", Toast.LENGTH_SHORT).show();
                                                              ^
  symbol:   variable Toast
  location: class PrescriptionSuccessActivity
C:\Users\lavan\OneDrive\Desktop\DiasRx\frontend\app\src\main\java\com\simats\frontend\PrescriptionSuccessActivity.java:359: error: cannot find symbol
            Toast.makeText(this, "Failed to open email app.", Toast.LENGTH_SHORT).show();
            ^
  symbol:   variable Toast
  location: class PrescriptionSuccessActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/lavan/OneDrive/Desktop/DiasRx/frontend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\lavan\OneDrive\Desktop\DiasRx\frontend\app\src\main\java\com\simats\frontend\PrescriptionSuccessActivity.java:359: error: cannot find symbol
              Toast.makeText(this, "Failed to open email app.", Toast.LENGTH_SHORT).show();
                                                                ^
    symbol:   variable Toast
    location: class PrescriptionSuccessActivity
  C:\Users\lavan\OneDrive\Desktop\DiasRx\frontend\app\src\main\java\com\simats\frontend\PrescriptionSuccessActivity.java:359: error: cannot find symbol
              Toast.makeText(this, "Failed to open email app.", Toast.LENGTH_SHORT).show();
              ^
    symbol:   variable Toast
    location: class PrescriptionSuccessActivity
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 15s
10 actionable tasks: 1 executed, 9 up-to-date
